# zikon

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  generate.py  package-lock.json  package.json  zikon.js
.agents/: PROJECT_CONTEXT.md  TECHNICAL_DEBT.md  state.example.json  state.json  state_rules.md
.agents/flow/: it_000001_audit.md  it_000001_compliance-report.json  it_000001_progress.json  it_000002_compliance-report.json  it_000002_progress.json  it_000003_PRD.json  it_000003_audit.json  it_000003_progress.json  it_000004_audit.json  it_000004_compliance-report.json  it_000004_progress.json  it_000005_progress.json  it_000006_PRD.json  it_000006_audit.json  it_000006_audit.md  it_000006_compliance-report.json  it_000006_product-requirement-document.md  it_000006_progress.json  state.json
.agents/skills/approve-prototype/: SKILL.md
.agents/skills/audit-prototype/: SKILL.md
.agents/skills/create-pr-document/: SKILL.md
.agents/skills/create-project-context/: SKILL.md
.github/workflows/: release.yml
cli/: package-lock.json  package.json  zikon.js
docs/nvst-flow/: COMMANDS.md  QUICK_USE.md
scripts/: build.js  bump.js
scripts/generate/: diffusers_backend.py  generate.py  pyproject.toml  requirements.txt  stub_backend.py
scripts/generate/tests/: test_generate.py
scripts/trace/: package-lock.json  package.json  trace.js
tests/: test_docs_it000002.py  test_docs_it000006.py  test_generate.py  test_skill_definition.js  test_skill_installable.js  test_skill_integration.js  test_skill_size.js  test_zikon.js
zikon-skills/: index.js
(+35 files in other folders)
