[project]
name = "zikon-generator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.27.0",
    "torch>=2.2.0",
    "accelerate>=0.28.0",
    "Pillow>=10.0.0",
    "transformers>=5.3.0",
]

[project.scripts]
generate = "generate:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
]
